--- a/css/port.css
+++ b/css/port.css
@@ -301,6 +301,7 @@ body.dark-theme {
     font-size: var(--biggest-font-size);
     letter-spacing: .3px;
     margin-bottom: .5rem;
+    justify-self: center;
 }
 .home__blob{
     position: relative;
